--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,23 @@ set(CMAKE_CXX_STANDARD 20)
 include(cmake/CPM.cmake)
 
 CPMAddPackage("gh:zeux/meshoptimizer#v0.21")
-#CPMAddPackage("gh:KarypisLab/METIS#v5.2.1")
+#CPMAddPackage(
+#        NAME gklib
+#        GIT_REPOSITORY git@github.com:KarypisLab/GKlib.git
+#        GIT_TAG METIS-v5.1.1-DistDGL-0.5
+#        DOWNLOAD_ONLY ON
+#)
+#CPMAddPackage(
+#        NAME metis
+#        GIT_REPOSITORY git@github.com:KarypisLab/METIS.git
+#        GIT_TAG v5.2.1
+#        DOWNLOAD_ONLY ON
+#)
+#execute_process(COMMAND bash -c "make -C ${metis_SOURCE_DIR} config")
+#set(GKLIB_PATH ${gklib_SOURCE_DIR})
+#add_subdirectory(${metis_SOURCE_DIR})
+include(cmake/metis.cmake)
+
 #CPMAddPackage("gh:scivision/METIS#v5.2.1.1")
 
 add_library(per_meshlet_nuances src/main.cpp)
@@ -15,4 +31,4 @@ add_library(per_meshlet_nuances src/main.cpp)
 
 add_executable(example src/main.cpp)
 target_link_libraries(example meshoptimizer)
-target_link_libraries(example METIS)
+target_link_libraries(example libmetis)
