add assimp, start building dag

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,18 @@ include(cmake/CPM.cmake)
 
 CPMAddPackage("gh:zeux/meshoptimizer#v0.21")
 include(cmake/metis.cmake)
+CPMAddPackage("gh:assimp/assimp#v5.4.2")
 
 # lib
-add_library(per_meshlet_nuances src/main.cpp)
+add_library(per_meshlet_nuances
+        src/main.cpp)
+target_include_directories(per_meshlet_nuances PUBLIC
+        include)
 target_link_libraries(per_meshlet_nuances meshoptimizer)
 target_link_libraries(per_meshlet_nuances libmetis)
 
 # example
 add_executable(example src/main.cpp)
-target_link_libraries(example meshoptimizer)
-target_link_libraries(example libmetis)
+target_link_libraries(example
+        per_meshlet_nuances
+        assimp)
