try geometry central

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ include(cmake/CPM.cmake)
 
 CPMAddPackage("gh:zeux/meshoptimizer#v0.21")
 include(cmake/metis.cmake)
+CPMAddPackage("gh:nmwsharp/geometry-central#v0.1.0")
 CPMAddPackage("gh:assimp/assimp#v5.4.2")
 
 # lib
@@ -15,8 +16,11 @@ add_library(per_meshlet_nuances
         src/main.cpp)
 target_include_directories(per_meshlet_nuances PUBLIC
         include)
-target_link_libraries(per_meshlet_nuances meshoptimizer)
-target_link_libraries(per_meshlet_nuances libmetis)
+target_link_libraries(per_meshlet_nuances
+        meshoptimizer
+        libmetis
+        geometry-central
+)
 
 # example
 add_executable(example src/main.cpp)
