--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,13 @@ CPMAddPackage("gh:zeux/meshoptimizer#v0.21")
 include(cmake/metis.cmake)
 CPMAddPackage("gh:nmwsharp/geometry-central#v0.1.0")
 CPMAddPackage("gh:assimp/assimp#v5.4.2")
+CPMAddPackage(
+    NAME BS_thread_pool
+    GITHUB_REPOSITORY bshoshany/thread-pool
+    VERSION 4.1.0)
+add_library(BS_thread_pool INTERFACE)
+target_include_directories(BS_thread_pool INTERFACE ${BS_thread_pool_SOURCE_DIR}/include)
+
 
 # lib
 add_library(per_meshlet_nuances
@@ -20,6 +27,7 @@ target_link_libraries(per_meshlet_nuances
         meshoptimizer
         libmetis
         geometry-central
+        BS_thread_pool
 )
 
 # example
