--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.28)
-project(per_meshlet_nuances
+project(trichi
         VERSION 0.1.0
         DESCRIPTION "Creates a hierarchical triangle cluster DAG"
         HOMEPAGE_URL "https://jolifantobambla.github.io/per-meshlet-nuances/"
@@ -8,7 +8,7 @@ project(per_meshlet_nuances
 
 set(CMAKE_CXX_STANDARD 20)
 
-option(PMN_PARALLEL "Build the library with parallelization enabled." OFF)
+option(TRICHI_PARALLEL "Build the library with parallelization enabled." OFF)
 
 # add dependencies
 include(cmake/CPM.cmake)
@@ -26,31 +26,31 @@ target_include_directories(BS_thread_pool INTERFACE ${BS_thread_pool_SOURCE_DIR}
 CPMAddPackage("gh:p-ranav/argparse#v3.0") # todo: move to own subdirectory with example target
 
 # lib
-add_library(per_meshlet_nuances
-        src/per_meshlet_nuances.cpp
+add_library(trichi
+        src/trichi.cpp
         src/common.cpp
         src/metis.cpp)
-target_include_directories(per_meshlet_nuances PUBLIC
+target_include_directories(trichi PUBLIC
         include)
-target_include_directories(per_meshlet_nuances PRIVATE
+target_include_directories(trichi PRIVATE
         src
 )
-target_link_libraries(per_meshlet_nuances
+target_link_libraries(trichi
         meshoptimizer
         libmetis
         geometry-central
         BS_thread_pool
 )
 
-if (PMN_PARALLEL)
-    target_compile_definitions(per_meshlet_nuances PRIVATE PMN_PARALLEL)
-endif (PMN_PARALLEL)
+if (TRICHI_PARALLEL)
+    target_compile_definitions(trichi PRIVATE TRICHI_PARALLEL)
+endif (TRICHI_PARALLEL)
 
 # example
 # todo: move to own subdirectory
 add_executable(example
         src/main.cpp)
 target_link_libraries(example
-        per_meshlet_nuances
+        trichi
         assimp
         argparse::argparse)
