--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ project(trichi
 
 set(CMAKE_CXX_STANDARD 20)
 
-option(TRICHI_PARALLEL "Build the library with parallelization enabled." OFF)
+option(TRICHI_PARALLEL "Build the library with parallelization enabled." ON)
 
 # add dependencies
 include(cmake/CPM.cmake)
