--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -31,6 +31,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          lfs: 'true'
+      - name: Populate model
+        run: git lfs pull
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
