fix multithreaded build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ project(trichi
 set(CMAKE_CXX_STANDARD 20)
 
 option(TRICHI_PARALLEL "Build the library with parallelization enabled." ON)
+option(TRICHI_BUILD_JS_MODULE "Build the library as a JavaScript module (currently only valid when built with emscripten)" OFF)
 option(TRICHI_BUILD_CLI "Build cli (only for native builds)" ON)
 
 # add dependencies
@@ -39,7 +40,36 @@ if (TRICHI_PARALLEL)
 endif (TRICHI_PARALLEL)
 
 if (EMSCRIPTEN)
-    add_subdirectory(js)
+    if (TRICHI_PARALLEL)
+        set(TRICHI_EMSCRIPTEN_PARALLEL_COMPILE_OPTIONS
+                -pthread
+                -matomics
+                -mbulk-memory
+        )
+        set(TRICHI_EMSCRIPTEN_PARALLEL_LINK_OPTIONS
+                -pthread
+                -matomics
+                -mbulk-memory
+                -sUSE_PTHREADS=1
+                -sPTHREAD_POOL_SIZE=navigator.hardwareConcurrency
+        )
+
+        target_compile_options(trichi PUBLIC ${TRICHI_EMSCRIPTEN_PARALLEL_COMPILE_OPTIONS})
+        target_link_options(trichi PUBLIC ${TRICHI_EMSCRIPTEN_PARALLEL_LINK_OPTIONS})
+
+        target_compile_options(meshoptimizer PUBLIC ${TRICHI_EMSCRIPTEN_PARALLEL_COMPILE_OPTIONS})
+        target_link_options(meshoptimizer PUBLIC ${TRICHI_EMSCRIPTEN_PARALLEL_LINK_OPTIONS})
+
+        target_compile_options(libmetis PUBLIC ${TRICHI_EMSCRIPTEN_PARALLEL_COMPILE_OPTIONS})
+        target_link_options(libmetis PUBLIC ${TRICHI_EMSCRIPTEN_PARALLEL_LINK_OPTIONS})
+
+        target_compile_options(GKlib PUBLIC ${TRICHI_EMSCRIPTEN_PARALLEL_COMPILE_OPTIONS})
+        target_link_options(GKlib PUBLIC ${TRICHI_EMSCRIPTEN_PARALLEL_LINK_OPTIONS})
+    endif (TRICHI_PARALLEL)
+
+    if (TRICHI_BUILD_JS_MODULE)
+        add_subdirectory(js)
+    endif (TRICHI_BUILD_JS_MODULE)
 else (EMSCRIPTEN)
     # js dump test thingy
     # todo: move to own subdirectory
@@ -49,7 +79,7 @@ else (EMSCRIPTEN)
 
         add_executable(dump_trichi_js
                 src/main.cpp)
-        target_link_libraries(dump_trichi_js
+        target_link_libraries(dump_trichi_js PUBLIC
                 trichi
                 assimp
                 argparse::argparse)
