--- a/js/CMakeLists.txt
+++ b/js/CMakeLists.txt
@@ -1,11 +1,16 @@
 CPMAddPackage("gh:assimp/assimp#v5.4.2")
 
+if (TRICHI_PARALLEL)
+    target_compile_options(assimp PUBLIC ${TRICHI_EMSCRIPTEN_PARALLEL_COMPILE_OPTIONS})
+    target_link_options(assimp PUBLIC ${TRICHI_EMSCRIPTEN_PARALLEL_LINK_OPTIONS})
+endif (TRICHI_PARALLEL)
+
 add_executable(trichi-wasm trichi-wasm.cpp)
 target_link_libraries(trichi-wasm trichi assimp)
-target_compile_options(trichi-wasm PRIVATE
+target_compile_options(trichi-wasm PUBLIC
         -Os
 )
-target_link_options(trichi-wasm PRIVATE
+target_link_options(trichi-wasm PUBLIC
         -lembind
         -Os
         -sEXPORT_ES6=1
@@ -15,18 +20,3 @@ target_link_options(trichi-wasm PRIVATE
         --emit-tsd
         # --emit-tsd trichi.d.ts how exactly is this option supposed to work? I get: "trichi.d.ts" was expected to be an input file, based on the commandline arguments provided
 )
-
-if (TRICHI_PARALLEL)
-    add_compile_options(
-            -pthread
-            -matomics
-            -mbulk-memory
-    )
-    add_link_options(
-            -pthread
-            -matomics
-            -mbulk-memory
-            -sUSE_PTHREADS=1
-            -sPTHREAD_POOL_SIZE="navigator.hardwareConcurrency"
-    )
-endif (TRICHI_PARALLEL)
