--- a/js/package.json
+++ b/js/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "description": "A library to generate triangle  cluster hierarchies from 3d meshes for per-surface patch LOD selection & rendering.",
   "type": "module",
-  "main": "dist/1.x/trichi.module.js",
-  "module": "dist/1.x/trichi.module.js",
-  "types": "dist/1.x/trichi.d.ts",
+  "main": "dist/0.x/trichi.module.js",
+  "module": "dist/0.x/trichi.module.js",
+  "types": "dist/0.x/trichi.d.ts",
   "files": [
     "/dist/**"
   ],
   "scripts": {
     "docs": "typedoc src/trichi.ts",
     "build": "rollup -c",
-    "lint": "eslint \"src/**/*.{js,ts,tsx}\""
+    "lint": "eslint \"src/trichi.ts\""
   },
   "keywords": [
   ],
@@ -30,12 +30,10 @@
     "wasm-feature-detect": "^1.8.0"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^26.0.1",
     "@rollup-extras/plugin-copy": "^1.9.3",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.6",
-    "@rollup/plugin-dynamic-import-vars": "^2.1.2",
     "@rollup/plugin-wasm": "^6.2.2",
     "@tsconfig/recommended": "1.0.6",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
