--- a/js/package.json
+++ b/js/package.json
@@ -15,6 +15,13 @@
     "lint": "eslint \"src/trichi.ts\""
   },
   "keywords": [
+    "lod",
+    "level-of-detail",
+    "mesh-processing",
+    "triangle-mesh",
+    "meshlets",
+    "graphics",
+    "graphics-programming"
   ],
   "author": "Lukas Herzberger",
   "license": "MIT",
@@ -44,7 +51,7 @@
     "eslint-plugin-one-variable-per-var": "0.0.3",
     "eslint-plugin-optional-comma-spacing": "^0.0.4",
     "eslint-plugin-require-trailing-comma": "0.0.1",
-    "rollup": "^4.18.0",
+    "rollup": "^4.22.5",
     "tslib": "^2.6.2",
     "typedoc": "^0.25.13",
     "typescript": "^5.4.5"
