--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -33,7 +33,8 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Node.js environment
         uses: actions/setup-node@v4.0.2
-      #- name: Populate model
+      - name: Populate model
+        run: cd demo && cat demo-mesh* > demo-mesh.js && rm demo-mesha*
       #  run: cd demo && curl -O https://jolifantobambla.github.io/trichi/demo-mesh.js
       - name: Install Dependencies
         run: cd js && npm install
